syntax = "proto3";
package savings;
option java_multiple_files = true;
option java_package = "io.qcodelabsllc.piggybank";
option java_outer_classname = "PiggyBankSavingsService";

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";


service SavingsService {
  rpc addSavings(stream Savings) returns (google.protobuf.StringValue);
  rpc getSavings(google.protobuf.StringValue) returns (Savings);
  rpc listSavings(ListSavingsRequest) returns (stream SavingsResponse);
}

message ListSavingsRequest {
  string customer_id = 1;
  string piggybank_id = 2;
}

message SavingsResponse {
  repeated Savings savings = 1;
}

message Savings {
  string id = 1;
  string piggybank_id = 2;
  double amount = 3;
  google.protobuf.Timestamp transaction_date = 4;
}